# agent-os

./: .gitignore  .gitmodules  AGENTS.md  CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSE-SPEC  LICENSE.txt  NOTICE  README.md  ROADMAP.md  STATE.MD  TODO.MD  TODO.md  TODO2.md  companies.xlsx  output.txt  protogen.sh  pyproject.toml  setup-python.sh
crates/aos-agent/: Cargo.toml
crates/aos-agent-eval/: Cargo.toml  README.md
crates/aos-agent-eval/cases/: 01-read-write-token.json  02-apply-patch.json  03-exec-roundtrip.json  04-write-file.json  05-edit-file.json  06-grep-token.json  07-glob-configs.json  08-stat-file.json  09-exists-file.json  10-list-dir.json  11-fallback-log-report.json
crates/aos-agent-eval/src/: casefile.rs  eval_host.rs  main.rs
crates/aos-agent-sdk/: Cargo.toml
crates/aos-agent-sdk/air/: README.md  manifest.air.json  module.air.json  schemas.air.json
crates/aos-agent-sdk/src/: lib.rs
crates/aos-agent/air/: README.md  manifest.air.json  module.air.json  schemas.air.json
crates/aos-agent/src/: lib.rs  workflow.rs  world.rs
crates/aos-air-exec/: Cargo.toml
crates/aos-air-exec/src/: expr.rs  lib.rs  value.rs
crates/aos-air-macros/: Cargo.toml
crates/aos-air-macros/src/: lib.rs
crates/aos-air-macros/tests/: air_schema.rs  diagnostics.rs
crates/aos-air-types/: Cargo.toml
crates/aos-air-types/src/: builtins.rs  catalog.rs  legacy_plan.rs  lib.rs  model.rs  plan_literals.rs  refs.rs  schema_index.rs  schemas.rs  typecheck.rs  validate.rs  value_normalize.rs
crates/aos-authoring/: Cargo.toml
crates/aos-authoring/src/: build.rs  bundle.rs  generated.rs  lib.rs  local.rs  manifest_loader.rs  sync.rs  util.rs
crates/aos-cli/: Cargo.toml
crates/aos-cli/src/: authoring.rs  client.rs  config.rs  input.rs  key.rs  main.rs  opts.rs  output.rs  render.rs  util.rs  workspace.rs
crates/aos-cli/tests/: air.rs  blob_cli.rs  gov_propose.rs  help.rs  help_flags.rs  obj_cli.rs  patch_dir.rs  plans_help.rs  profile_selection.rs  trace_journal_help.rs  trace_ops_help.rs
crates/aos-effect-adapters/: Cargo.toml
crates/aos-effect-adapters/src/: config.rs  lib.rs
crates/aos-effect-adapters/tests/: adapters_host_fabric_integration.rs  adapters_host_fs_integration.rs  adapters_host_integration.rs  adapters_http_integration.rs  adapters_llm_integration.rs
crates/aos-effect-adapters/tests_e2e/: host_adapter_e2e.rs  host_fs_adapter_e2e.rs
crates/aos-effect-adapters/tests_live/: adapters_host_fabric_live.rs  adapters_llm_live.rs  llm_live_common.rs  llm_live_scenarios.rs  llm_live_tools.rs
crates/aos-effects/: Cargo.toml
crates/aos-effects/src/: capability.rs  effect_kind.rs  effect_ops.rs  intent.rs  kinds.rs  lib.rs  normalize.rs  receipt.rs  stream.rs  traits.rs
crates/aos-examples/: Cargo.toml
crates/aos-examples/src/: aggregator.rs  blob_echo.rs  chain_comp.rs  counter.rs  example_host.rs  fetch_notify.rs  hello_timer.rs  llm_summarizer.rs  main.rs  manifest_loader.rs  reducer_harness.rs  retry_backoff.rs  safe_upgrade.rs  util.rs  workspaces.rs  worldfs_lab.rs
crates/aos-examples/tests/: cli.rs  testhost_examples.rs
crates/aos-fdb/: Cargo.toml  build.rs
crates/aos-fdb/scripts/: fdb-dev
crates/aos-fdb/src/: cas.rs  fdb.rs  fork_snapshot.rs  keyspace.rs  lib.rs  memory.rs  object_store.rs  projection.rs  protocol.rs  segment.rs
crates/aos-fdb/tests/: fdb_cas.rs  fdb_e2e.rs  fdb_inbox.rs  fdb_journal.rs  fdb_reopen.rs  fdb_runtime_regressions.rs  fdb_secret.rs  fdb_segment.rs  fdb_snapshot.rs
crates/aos-harness-py/: Cargo.toml  README.md  pyproject.toml
crates/aos-harness-py/examples/: agent_no_tool_llm.py  timer_smoke.py
crates/aos-harness-py/src/: compat_harness.rs  lib.rs
crates/aos-harness-py/tests/: test_agent_workflow.py
crates/aos-host/: Cargo.toml
crates/aos-host/src/: config.rs  control.rs  error.rs  host.rs  hosted.rs  lib.rs  manifest_loader.rs  testhost.rs  trace.rs  util.rs  world_io.rs
crates/aos-host/tests/: adapters_host_fs_integration.rs  adapters_host_integration.rs  adapters_http_integration.rs  adapters_http_llm.rs  adapters_llm_integration.rs  adapters_process_integration.rs  blob_journal_externalization_integration.rs  cap_enforcer_integration.rs  control_governance.rs  control_integration.rs  control_patchdoc.rs  control_patchdoc_integration.rs  control_workspace.rs  control_workspace_integration.rs  daemon_integration.rs  demiurge_introspect_manifest_e2e.rs  effect_params_normalization.rs  effect_params_normalization_integration.rs  fixtures.rs  governance_effects_integration.rs  governance_integration.rs  governance_plan.rs  governance_plan_integration.rs  helpers.rs  host_smoke.rs  host_smoke_integration.rs  host_snapshot.rs  host_snapshot_integration.rs  hosted_persistence_integration.rs  http_api_journal.rs  http_api_journal_integration.rs  introspection_integration.rs  journal_integration.rs  keyed_reducer_integration.rs  keyed_workflow_integration.rs  manifest_examples.rs  manifest_examples_integration.rs  object_catalog_integration.rs  policy_integration.rs  pure_module_integration.rs  (+7 more)
crates/aos-host/tests_e2e/: cap_enforcer_e2e.rs  demiurge_introspect_manifest_e2e.rs  host_adapter_e2e.rs  host_fs_adapter_e2e.rs  process_adapter_e2e.rs  workspace_e2e.rs
crates/aos-host/tests_live/: adapters_llm_live.rs  llm_live_common.rs  llm_live_scenarios.rs  llm_live_tools.rs
crates/aos-kernel/: Cargo.toml
crates/aos-kernel/src/: cap_enforcer.rs  cap_ledger.rs  capability.rs  cell_index.rs  effects.rs  error.rs  event.rs  governance.rs  governance_effects.rs  governance_utils.rs  internal_effects.rs  journal.rs  lib.rs  manifest.rs  manifest_catalog.rs  module_runtime.rs  (+15 more)
crates/aos-llm/: Cargo.toml  README.md
crates/aos-node/: Cargo.toml  README.md
crates/aos-node-hosted/: Cargo.toml
crates/aos-node-local/: Cargo.toml
crates/aos-runtime/: Cargo.toml
crates/aos-smoke/: Cargo.toml
crates/aos-sqlite/: Cargo.toml
crates/aos-store/: Cargo.toml
crates/aos-sys/: Cargo.toml
crates/aos-testkit/: Cargo.toml
crates/aos-wasm-build/: Cargo.toml
crates/aos-wasm-sdk/: Cargo.toml
(+1893 files in other folders)
