[workspace]
members = [
  "crates/aos-air-types",
  "crates/aos-air-exec",
  "crates/aos-cbor",
  "crates/aos-store",
  "crates/aos-wasm-abi",
  "crates/aos-wasm",
  "crates/aos-effects",
  "crates/aos-llm",
  "crates/aos-agent-sdk",
  "crates/aos-kernel",
  "crates/aos-host",
  "crates/aos-wasm-sdk",
  "crates/aos-cli",
  "crates/aos-wasm-build",
  "crates/aos-sys",
  "crates/aos-smoke",
]
resolver = "2"
