[workspace]
members = [
  "crates/aos-authoring",
  "crates/aos-effect-types",
  "crates/aos-air-types",
  "crates/aos-air-exec",
  "crates/aos-cbor",
  "crates/aos-node",
  "crates/aos-node-local",
  "crates/aos-wasm-abi",
  "crates/aos-wasm",
  "crates/aos-effects",
  "crates/aos-effect-adapters",
  "crates/aos-llm",
  "crates/aos-agent",
  "crates/aos-kernel",
  "crates/aos-harness-py",
  "crates/aos-node-hosted",
  "crates/aos-cli",
  "crates/aos-wasm-sdk",
  "crates/aos-wasm-build",
  "crates/aos-sys",
  "crates/aos-smoke",
  "crates/aos-agent-eval",
]
resolver = "2"
