[workspace]
members = [
  "crates/aos-air-macros",
  "crates/aos-authoring",
  "crates/aos-effect-types",
  "crates/aos-air-types",
  "crates/aos-air-exec",
  "crates/aos-cbor",
  "crates/aos-node",
  "crates/aos-wasm-abi",
  "crates/aos-wasm",
  "crates/aos-effects",
  "crates/aos-effect-adapters",
  "crates/aos-llm",
  "crates/aos-agent",
  "crates/aos-kernel",
  "crates/aos-harness-py",
  "crates/aos-cli",
  "crates/aos-wasm-sdk",
  "crates/aos-wasm-build",
  "crates/aos-sys",
  "crates/aos-smoke",
  "crates/aos-agent-eval",
  "crates/fabric-protocol",
  "crates/fabric-client",
  "crates/fabric-controller",
  "crates/fabric-host",
  "crates/fabric-cli",
]
exclude = [
  "third_party/smolvm",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
publish = false

[workspace.dependencies]
# Workspace crates.
aos-agent = { path = "crates/aos-agent" }
aos-air-exec = { path = "crates/aos-air-exec" }
aos-air-macros = { path = "crates/aos-air-macros" }
aos-air-types = { path = "crates/aos-air-types" }
aos-authoring = { path = "crates/aos-authoring" }
aos-cbor = { path = "crates/aos-cbor" }
aos-effect-adapters = { path = "crates/aos-effect-adapters" }
aos-effect-types = { path = "crates/aos-effect-types" }
aos-effects = { path = "crates/aos-effects" }
aos-kernel = { path = "crates/aos-kernel" }
aos-llm = { path = "crates/aos-llm" }
aos-node = { path = "crates/aos-node" }
aos-sys = { path = "crates/aos-sys" }
aos-wasm = { path = "crates/aos-wasm" }
aos-wasm-abi = { path = "crates/aos-wasm-abi" }
aos-wasm-build = { path = "crates/aos-wasm-build" }
aos-wasm-sdk = { path = "crates/aos-wasm-sdk" }
fabric-client = { path = "crates/fabric-client" }
fabric-protocol = { path = "crates/fabric-protocol" }

# Shared third-party crates.
anyhow = "1"
assert_cmd = "2"
async-trait = "0.1"
axum = { version = "0.8.8", features = ["json"] }
base64 = "0.22"
camino = { version = "1", features = ["serde1"] }
clap = { version = "4", features = ["derive"] }
dotenvy = "0.15"
futures = "0.3"
futures-core = "0.3"
futures-util = "0.3"
getrandom = "0.2"
globset = "0.4"
hex = "0.4"
indexmap = "2"
jsonschema = "0.17"
log = "0.4"
once_cell = "1"
predicates = "3"
proc-macro2 = "1"
quote = "1"
regex = "1"
reqwest = { version = "0.12", features = ["json", "stream"] }
rusqlite = { version = "0.31", features = ["bundled"] }
serde_bytes = "0.11"
serde_cbor = "0.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
syn = { version = "2", features = ["full"] }
tempfile = "3"
thiserror = "2"
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "signal", "sync", "time"] }
tower = { version = "0.5", features = ["util"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
utoipa = { version = "5.4", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "9", features = ["axum"] }
url = "2"
uuid = { version = "1", features = ["v4"] }
walkdir = "2"
wasmtime = "36.0.3"
wat = "1"
