[tool.poetry]
name = "agent-os-py"
version = "0.1.0"
description = "A library and runtime to build autonomous AI agents."
authors = []
license = "MIT"
readme = "README.md"
packages = [
    {include = "grit", from = "src"}, 
    {include = "wit", from = "src"}, 
    {include = "sync", from = "src"}, 
    {include = "web", from = "src"}, 
    {include = "runtime", from = "src"},
    {include = "cli", from = "src"},

    {include = "completions", from = "agents/lib"},
    {include = "tools", from = "agents/lib"},

    {include = "jetpack", from = "agents"},
]
repository = "https://github.com/lukebuehler/agent-os"

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^1.0.0"
pydantic = "^2.0.1"
aiofiles = "^23.1.0"
async-lru = "^2.0.2"
pytest = "^7.3.1"
pytest-asyncio = "^0.21.0"
tomlkit = "^0.11.8"
lmdb = "^1.4.1"
watchfiles = "^0.19.0"
starlette = "^0.28.0"
sse-starlette = "^1.6.1"
uvicorn = "^0.22.0"
httpx = "^0.24.1"
httpx-sse = ">=0.3.0,<0.4.0"
jinja2 = "^3.1.2"
click = "^8.1.5"
openai = "^0.27.8"
pandas = "^1.5.3"
requests = "^2.31.0"
pillow = "^10.0.0"
scikit-learn = "^1.3.0"
transitions = "^0.9.0"
beautifulsoup4 = "^4.12.2"
mistune = "^3.0.1"
filetype = "^1.2.0"
ruff = "^0.0.285"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.poetry.scripts]
aos = "cli.aos:cli"
perf = "tests.perf.perf:main"
gen = "examples.coder.generator.gen_workbench:main"

[tool.ruff]
select = ["E", "F", "B"]
ignore = ["F403", "F405"]
line-length = 150

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401", "E402"]
