[tool.poetry]
name = "agent-os-py"
version = "0.1.1"
description = "A library and runtime to build autonomous AI agents."
authors = []
license = "MIT"
readme = "README.md"
packages = [
    {include = "aos"}, 
]
repository = "https://github.com/lukebuehler/agent-os"

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^1.0.0"
pydantic = "^2.0.1"
aiofiles = "^23.1.0"
async-lru = "^2.0.2"
pytest-asyncio = "^0.21.0"
tomlkit = "^0.11.8"
lmdb = "^1.4.1"
watchfiles = "^0.19.0"
starlette = "^0.37.2"
sse-starlette = "^1.6.1"
uvicorn = "^0.22.0"
click = "^8.1.5"
filetype = "^1.2.0"
grpcio = "^1.62.1"
py-multibase = "^1.0.3"
py-multicodec = "^0.2.1"
base58 = "^2.1.1"
cryptography = "^42.0.5"
grpcio-tools = "^1.62.2"

[tool.poetry.group.test.dependencies]
pytest = "^8.1.1"
httpx = "^0.27.0"
httpx-sse = "^0.4.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.3.7"


[tool.poetry.group.agents]
# to install run poetry install --with agents
optional = true

[tool.poetry.group.agents.dependencies]
jinja2 = "^3.1.3"
openai = "^1.17.0"
pandas = "^2.2.2"
requests = "^2.31.0"
pillow = "^10.3.0"
scikit-learn = "^1.4.2"
transitions = "^0.9.0"
beautifulsoup4 = "^4.12.3"
mistune = "^3.0.2"
yfinance = "^0.2.37"
matplotlib = "^3.8.4"
openpyxl = "^3.1.2"
jsonschema = "^4.21.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.poetry.scripts]
aos = "aos.cli.cli:cli"
gritserv = "aos.cluster.grit.grit_server:serve"
perf = "tests.perf.perf:main"
gen = "examples.coder.generator.gen_workbench:main"

[tool.ruff]
select = ["E", "F", "B"]
ignore = ["F403", "F405", "E501"]
line-length = 150

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401", "E402"]
