[package]
name = "aos-agent-eval"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
aos-agent = { path = "../aos-agent" }
aos-air-types = { path = "../aos-air-types" }
aos-authoring = { path = "../aos-authoring" }
aos-cbor = { path = "../aos-cbor" }
aos-effects = { path = "../aos-effects" }
aos-effect-adapters = { path = "../aos-effect-adapters", features = ["e2e-tests"] }
aos-kernel = { path = "../aos-kernel" }
aos-node = { path = "../aos-node" }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_cbor = "0.11"
serde_json = "1"
tempfile = "3"
tokio = { version = "1", features = ["rt", "time"] }
uuid = { version = "1", features = ["v4"] }

[lints.rust]
unused_imports = "allow"
unused_variables = "allow"
dead_code = "allow"
