[package]
name = "aos-agent-eval"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
anyhow.workspace = true
aos-agent.workspace = true
aos-air-types.workspace = true
aos-authoring.workspace = true
aos-cbor.workspace = true
aos-effects.workspace = true
aos-effect-adapters = { workspace = true, features = ["e2e-tests"] }
aos-kernel.workspace = true
aos-node.workspace = true
clap.workspace = true
serde.workspace = true
serde_cbor.workspace = true
serde_json.workspace = true
tempfile.workspace = true
tokio = { workspace = true, features = ["rt", "time"] }
uuid = { workspace = true, features = ["v4"] }

[lints.rust]
unused_imports = "allow"
unused_variables = "allow"
dead_code = "allow"
