[package]
name = "aos-agent"
version.workspace = true
edition.workspace = true
publish.workspace = true

[lib]
path = "src/lib.rs"

[[bin]]
name = "session_workflow"
path = "src/bin/session_workflow.rs"

[[bin]]
name = "session_event_echo"
path = "src/bin/session_event_echo.rs"

[dependencies]
aos-air-types.workspace = true
aos-effect-types.workspace = true
aos-effects.workspace = true
aos-wasm-sdk.workspace = true
aos-wasm-abi.workspace = true
base64 = { version = "0.22", default-features = false, features = ["alloc"] }
serde.workspace = true
serde_bytes.workspace = true
serde_cbor.workspace = true
serde_json = { version = "1", default-features = false, features = ["alloc"] }
sha2 = { version = "0.10", default-features = false }
