[package]
name = "aos-air-exec"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
aos-air-types = { path = "../aos-air-types" }
aos-cbor = { path = "../aos-cbor" }
indexmap = "2"
thiserror = "1"
base64 = "0.22"
serde = { version = "1", features = ["derive"] }
serde_cbor = "0.11"
serde_bytes = "0.11"
