[package]
name = "aos-air-exec"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
aos-air-types.workspace = true
aos-cbor.workspace = true
indexmap.workspace = true
thiserror.workspace = true
base64.workspace = true
serde.workspace = true
serde_cbor.workspace = true
serde_bytes.workspace = true
