[package]
name = "aos-air-macros"
version.workspace = true
edition.workspace = true
publish.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2.workspace = true
quote.workspace = true
serde_json.workspace = true
syn.workspace = true

[dev-dependencies]
aos-air-types.workspace = true
aos-wasm-sdk = { workspace = true, features = ["air-macros"] }
tempfile.workspace = true
