[package]
name = "aos-air-types"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
indexmap = { version = "2", features = ["serde"] }
petgraph = "0.6"
thiserror = "1"
once_cell = "1"
aos-cbor = { path = "../aos-cbor" }

[dev-dependencies]
jsonschema = "0.17"
