[package]
name = "aos-air-types"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
aos-effect-types.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_cbor.workspace = true
indexmap = { workspace = true, features = ["serde"] }
petgraph = "0.6"
thiserror.workspace = true
once_cell.workspace = true
aos-cbor.workspace = true

[dev-dependencies]
jsonschema.workspace = true
