[package]
name = "aos-authoring"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
anyhow = "1"
aos-air-types = { path = "../aos-air-types" }
aos-cbor = { path = "../aos-cbor" }
aos-kernel = { path = "../aos-kernel" }
aos-node = { path = "../aos-node" }
aos-effect-adapters = { path = "../aos-effect-adapters" }
aos-runtime = { path = "../aos-runtime" }
aos-wasm-build = { path = "../aos-wasm-build" }
camino = "1"
dotenvy = "0.15"
hex = "0.4"
jsonschema = "0.17"
serde = { version = "1", features = ["derive"] }
serde_cbor = "0.11"
serde_json = "1"
walkdir = "2"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tempfile = "3"
