[package]
name = "aos-authoring"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
anyhow.workspace = true
aos-air-types.workspace = true
aos-cbor.workspace = true
aos-kernel.workspace = true
aos-node.workspace = true
aos-effect-adapters.workspace = true
aos-wasm-build.workspace = true
camino.workspace = true
dotenvy.workspace = true
hex.workspace = true
jsonschema.workspace = true
serde.workspace = true
serde_cbor.workspace = true
serde_json.workspace = true
walkdir.workspace = true
uuid = { workspace = true, features = ["v4"] }

[dev-dependencies]
tempfile.workspace = true
