[package]
name = "aos-cli"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
aos-air-types = { path = "../aos-air-types" }
aos-kernel = { path = "../aos-kernel" }
aos-host = { path = "../aos-host" }
aos-store = { path = "../aos-store" }
aos-wasm-build = { path = "../aos-wasm-build" }
camino = "1"
clap = { version = "4", features = ["derive", "env"] }
hex = "0.4"
base64 = "0.22"
serde_json = "1"
serde_cbor = "0.11"
tokio = { version = "1", features = ["full", "signal"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
dotenvy = "0.15"
jsonschema = "0.17"
aos-cbor = { path = "../aos-cbor" }
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
anyhow = "1"
serde_json = "1"
assert_cmd = "2"
tempfile = "3"

[[bin]]
name = "aos"
path = "src/main.rs"
