[package]
name = "aos-cli"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
aos-authoring = { path = "../aos-authoring" }
aos-effect-types = { path = "../aos-effect-types" }
aos-air-types = { path = "../aos-air-types" }
aos-cbor = { path = "../aos-cbor" }
aos-kernel = { path = "../aos-kernel" }
aos-node = { path = "../aos-node" }
aos-sqlite = { path = "../aos-sqlite" }
aos-sys = { path = "../aos-sys" }
aos-runtime = { path = "../aos-runtime" }

anyhow = "1"
base64 = "0.22"
clap = { version = "4", features = ["derive", "env"] }
ignore = "0.4"
percent-encoding = "2"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_bytes = "0.11"
serde_cbor = "0.11"
serde_json = "1"
tokio = { version = "1", features = ["full"] }
uuid = "1"
walkdir = "2"

[dev-dependencies]
assert_cmd = "2"
axum = { version = "0.8.8", features = ["json"] }
aos-node-hosted = { path = "../aos-node-hosted" }
predicates = "3"
tempfile = "3"
tower = { version = "0.5", features = ["util"] }

[[bin]]
name = "aos"
path = "src/main.rs"
