[package]
name = "aos-cli"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
aos-authoring.workspace = true
aos-effect-types.workspace = true
aos-air-types.workspace = true
aos-cbor.workspace = true
aos-kernel.workspace = true
aos-node.workspace = true

anyhow.workspace = true
base64.workspace = true
clap = { workspace = true, features = ["env"] }
ignore = "0.4"
percent-encoding = "2"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
serde.workspace = true
serde_bytes.workspace = true
serde_cbor.workspace = true
serde_json.workspace = true
tempfile.workspace = true
tokio = { workspace = true, features = ["full"] }
tracing-subscriber.workspace = true
uuid.workspace = true
walkdir.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
axum.workspace = true
predicates.workspace = true
tower.workspace = true

[[bin]]
name = "aos"
path = "src/main.rs"
