[package]
name = "aos-effect-adapters"
version = "0.1.0"
edition = "2024"

[features]
default = ["adapter-http", "adapter-llm"]
adapter-http = ["reqwest", "url"]
adapter-llm = ["aos-llm"]
e2e-tests = []

[dependencies]
aos-air-types = { path = "../aos-air-types" }
aos-cbor = { path = "../aos-cbor" }
aos-effects = { path = "../aos-effects" }
aos-kernel = { path = "../aos-kernel" }
aos-llm = { path = "../aos-llm", optional = true }
aos-air-exec = { path = "../aos-air-exec" }

tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
anyhow = "1"
tracing = "0.1"
base64 = "0.21"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_cbor = "0.11"
reqwest = { version = "0.11", features = ["json"], optional = true }
url = { version = "2", optional = true }
once_cell = "1"
indexmap = "2"
sha2 = "0.10"
hex = "0.4"
globset = "0.4"
regex = "1"
walkdir = "2"
log = "0.4"

[dev-dependencies]
tempfile = "3"

[[test]]
name = "host_adapter_e2e"
path = "tests_e2e/host_adapter_e2e.rs"
required-features = ["e2e-tests"]

[[test]]
name = "host_fs_adapter_e2e"
path = "tests_e2e/host_fs_adapter_e2e.rs"
required-features = ["e2e-tests"]

[[test]]
name = "adapters_llm_live"
path = "tests_live/adapters_llm_live.rs"
required-features = ["adapter-llm"]
