[package]
name = "aos-effect-adapters"
version.workspace = true
edition.workspace = true
publish.workspace = true

[features]
default = ["adapter-http", "adapter-llm"]
adapter-http = ["reqwest", "url"]
adapter-llm = ["aos-llm"]
e2e-tests = []

[dependencies]
aos-air-types.workspace = true
aos-cbor.workspace = true
aos-effects.workspace = true
aos-kernel.workspace = true
aos-llm = { workspace = true, optional = true }
aos-air-exec.workspace = true
fabric-client.workspace = true
fabric-protocol.workspace = true

tokio = { workspace = true, features = ["full"] }
async-trait.workspace = true
anyhow.workspace = true
tracing.workspace = true
base64.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_cbor.workspace = true
reqwest = { version = "0.11", features = ["json"], optional = true }
url = { workspace = true, optional = true }
once_cell.workspace = true
indexmap.workspace = true
sha2.workspace = true
hex.workspace = true
globset.workspace = true
regex.workspace = true
walkdir.workspace = true
log.workspace = true

[dev-dependencies]
axum.workspace = true
futures-util.workspace = true
tempfile.workspace = true

[[test]]
name = "host_adapter_e2e"
path = "tests_e2e/host_adapter_e2e.rs"
required-features = ["e2e-tests"]

[[test]]
name = "host_fs_adapter_e2e"
path = "tests_e2e/host_fs_adapter_e2e.rs"
required-features = ["e2e-tests"]

[[test]]
name = "adapters_llm_live"
path = "tests_live/adapters_llm_live.rs"
required-features = ["adapter-llm"]

[[test]]
name = "adapters_host_fabric_live"
path = "tests_live/adapters_host_fabric_live.rs"
