[package]
name = "aos-effects"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
aos-cbor.workspace = true
aos-air-types.workspace = true
aos-effect-types.workspace = true
serde.workspace = true
serde_bytes.workspace = true
serde_json.workspace = true
thiserror.workspace = true
serde_cbor.workspace = true
