[package]
name = "aos-examples"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
aos-air-types = { path = "../aos-air-types" }
aos-cbor = { path = "../aos-cbor" }
aos-kernel = { path = "../aos-kernel" }
aos-store = { path = "../aos-store" }
aos-wasm-abi = { path = "../aos-wasm-abi" }
aos-effects = { path = "../aos-effects" }
aos-wasm-build = { path = "../aos-wasm-build" }
clap = { version = "4", features = ["derive"] }
indexmap = "2"
once_cell = "1"
camino = "1"
serde = { version = "1", features = ["derive"] }
serde_cbor = "0.11"
serde_bytes = "0.11"
sha2 = "0.10"
hex = "0.4"
