[package]
name = "aos-fdb"
version = "0.1.0"
edition = "2024"
publish = false
build = "build.rs"
autotests = false

[features]
default = []
foundationdb-backend = ["dep:foundationdb", "dep:futures"]

[dependencies]
aos-cbor = { path = "../aos-cbor" }
aos-effects = { path = "../aos-effects" }
aos-kernel = { path = "../aos-kernel" }
aos-node = { path = "../aos-node" }
foundationdb = { version = "0.10.0", default-features = false, features = ["fdb-7_3", "embedded-fdb-include"], optional = true }
futures = { version = "0.3", optional = true }
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_bytes = "0.11"
serde_cbor = "0.11"
sha2 = "0.10"
thiserror = "1"
uuid = { version = "1", features = ["serde", "v4"] }

[dev-dependencies]
dotenvy = "0.15"
tempfile = "3"
uuid = { version = "1", features = ["v4"] }

[[test]]
name = "fdb_cas"
path = "tests/fdb_cas.rs"
required-features = ["foundationdb-backend"]

[[test]]
name = "fdb_e2e"
path = "tests/fdb_e2e.rs"
required-features = ["foundationdb-backend"]

[[test]]
name = "fdb_inbox"
path = "tests/fdb_inbox.rs"
required-features = ["foundationdb-backend"]

[[test]]
name = "fdb_journal"
path = "tests/fdb_journal.rs"
required-features = ["foundationdb-backend"]

[[test]]
name = "fdb_reopen"
path = "tests/fdb_reopen.rs"
required-features = ["foundationdb-backend"]

[[test]]
name = "fdb_runtime_regressions"
path = "tests/fdb_runtime_regressions.rs"
required-features = ["foundationdb-backend"]

[[test]]
name = "fdb_secret"
path = "tests/fdb_secret.rs"
required-features = ["foundationdb-backend"]

[[test]]
name = "fdb_segment"
path = "tests/fdb_segment.rs"
required-features = ["foundationdb-backend"]

[[test]]
name = "fdb_snapshot"
path = "tests/fdb_snapshot.rs"
required-features = ["foundationdb-backend"]
