[package]
name = "aos-harness-py"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
name = "_core"
crate-type = ["cdylib"]

[dependencies]
anyhow = "1"
aos-cbor = { path = "../aos-cbor" }
aos-authoring = { path = "../aos-authoring" }
aos-effects = { path = "../aos-effects" }
aos-kernel = { path = "../aos-kernel" }
aos-node = { path = "../aos-node" }
base64 = "0.22"
pyo3 = { version = "0.23", features = ["abi3-py39", "auto-initialize", "extension-module"] }
serde = { version = "1", features = ["derive"] }
serde_cbor = "0.11"
serde_json = "1"
tempfile = "3"
tokio = { version = "1", features = ["rt", "sync"] }
uuid = { version = "1", features = ["v4"] }

[build-dependencies]
pyo3-build-config = "0.23"
