[package]
name = "aos-harness-py"
version.workspace = true
edition.workspace = true
publish.workspace = true

[lib]
name = "_core"
crate-type = ["cdylib"]

[dependencies]
anyhow.workspace = true
aos-cbor.workspace = true
aos-authoring.workspace = true
aos-effects.workspace = true
aos-kernel.workspace = true
aos-node.workspace = true
base64.workspace = true
pyo3 = { version = "0.23", features = ["abi3-py39", "auto-initialize", "extension-module"] }
serde.workspace = true
serde_cbor.workspace = true
serde_json.workspace = true
tempfile.workspace = true
tokio = { workspace = true, features = ["rt", "sync"] }
uuid = { workspace = true, features = ["v4"] }

[build-dependencies]
pyo3-build-config = "0.23"
