[package]
name = "aos-host"
version = "0.1.0"
edition = "2024"

[features]
# Real effect adapters are feature-gated so tests and consumers can opt-out of
# networked dependencies. They are ON by default.
default = ["adapter-http", "adapter-llm"]
adapter-http = ["reqwest", "url"]
adapter-llm = ["reqwest"]
test-fixtures = ["aos-air-exec", "aos-wasm-abi", "indexmap", "wat", "sha2"]

[dependencies]
aos-kernel = { path = "../aos-kernel" }
aos-effects = { path = "../aos-effects" }
aos-cbor = { path = "../aos-cbor" }
aos-store = { path = "../aos-store" }
aos-air-types = { path = "../aos-air-types" }
aos-sys = { path = "../aos-sys" }

walkdir = "2"
log = "0.4"

# Optional dependencies for test-fixtures feature
aos-air-exec = { path = "../aos-air-exec", optional = true }
aos-wasm-abi = { path = "../aos-wasm-abi", optional = true }
indexmap = { version = "2", optional = true }
wat = { version = "1", optional = true }
sha2 = { version = "0.10", optional = true }
hex = "0.4"

tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
anyhow = "1"
thiserror = "1"
tracing = "0.1"
base64 = "0.21"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_cbor = "0.11"
tempfile = "3"
reqwest = { version = "0.11", features = ["json"], optional = true }
url = { version = "2", optional = true }
once_cell = "1"
jsonschema = "0.17"
axum = { version = "0.8.8", features = ["macros", "json"] }
utoipa = "5.4"
utoipa-swagger-ui = { version = "9", features = ["axum"] }

[dev-dependencies]
aos-air-exec = { path = "../aos-air-exec" }
aos-wasm-abi = { path = "../aos-wasm-abi" }
indexmap = "2"
wat = "1"
sha2 = "0.10"
hex = "0.4"
serde_bytes = "0.11"
aos-wasm-build = { path = "../aos-wasm-build" }
camino = "1"
dotenvy = "0.15"
