[package]
name = "aos-kernel"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
aos-air-types = { path = "../aos-air-types" }
aos-air-exec = { path = "../aos-air-exec" }
aos-effects = { path = "../aos-effects" }
aos-wasm = { path = "../aos-wasm" }
aos-wasm-abi = { path = "../aos-wasm-abi" }
aos-cbor = { path = "../aos-cbor" }
aos-store = { path = "../aos-store" }
anyhow = "1"
indexmap = "2"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_cbor = "0.11"
serde_json = "1"
log = "0.4"
serde_bytes = "0.11"
hex = "0.4"

[dev-dependencies]
wat = "1"
tempfile = "3"

[lints.rust]
unused_imports = "allow"
unused_variables = "allow"
dead_code = "allow"
