[package]
name = "aos-kernel"
version = "0.1.0"
edition = "2024"
publish = false

[features]
default = []
e2e-tests = []

[dependencies]
aos-air-types = { path = "../aos-air-types" }
aos-air-exec = { path = "../aos-air-exec" }
aos-effects = { path = "../aos-effects" }
aos-wasm = { path = "../aos-wasm" }
aos-wasm-abi = { path = "../aos-wasm-abi" }
aos-cbor = { path = "../aos-cbor" }
anyhow = "1"
indexmap = "2"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_cbor = "0.11"
serde_json = "1"
log = "0.4"
serde_bytes = "0.11"
hex = "0.4"
base64 = "0.21"
url = "2"
wasmtime = "36.0.3"
getrandom = "0.2"
uuid = { version = "1", features = ["serde", "v4"] }

[dev-dependencies]
wat = "1"
tempfile = "3"
aos-wasm-build = { path = "../aos-wasm-build" }
camino = "1"
walkdir = "2"
tokio = { version = "1", features = ["macros", "rt", "time"] }

[lints.rust]
unused_imports = "allow"
unused_variables = "allow"
dead_code = "allow"

[[test]]
name = "cap_enforcer_e2e"
path = "tests_e2e/cap_enforcer_e2e.rs"
required-features = ["e2e-tests"]

[[test]]
name = "workspace_e2e"
path = "tests_e2e/workspace_e2e.rs"
required-features = ["e2e-tests"]
