[package]
name = "aos-kernel"
version.workspace = true
edition.workspace = true
publish.workspace = true

[features]
default = []
e2e-tests = []

[dependencies]
aos-air-types.workspace = true
aos-air-exec.workspace = true
aos-effects.workspace = true
aos-wasm.workspace = true
aos-wasm-abi.workspace = true
aos-cbor.workspace = true
anyhow.workspace = true
indexmap.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_cbor.workspace = true
serde_json.workspace = true
log.workspace = true
serde_bytes.workspace = true
hex.workspace = true
base64.workspace = true
url.workspace = true
wasmtime.workspace = true
getrandom.workspace = true
uuid = { workspace = true, features = ["serde", "v4"] }

[dev-dependencies]
wat.workspace = true
tempfile.workspace = true
aos-wasm-build.workspace = true
camino.workspace = true
walkdir.workspace = true
tokio = { workspace = true, features = ["macros", "rt", "time"] }

[lints.rust]
unused_imports = "allow"
unused_variables = "allow"
dead_code = "allow"

[[test]]
name = "workspace_e2e"
path = "tests_e2e/workspace_e2e.rs"
required-features = ["e2e-tests"]
