[package]
name = "aos-llm"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
async-trait.workspace = true
base64.workspace = true
bytes = "1"
futures.workspace = true
mime_guess = "2"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["macros", "rt", "time"] }
