[package]
name = "aos-node-hosted"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
aos-authoring = { path = "../aos-authoring" }
aos-air-types = { path = "../aos-air-types" }
aos-cbor = { path = "../aos-cbor" }
aos-effect-types = { path = "../aos-effect-types" }
aos-effect-adapters = { path = "../aos-effect-adapters" }
aos-effects = { path = "../aos-effects" }
aos-fdb = { path = "../aos-fdb", features = ["foundationdb-backend"] }
aos-kernel = { path = "../aos-kernel" }
aos-node = { path = "../aos-node" }
aos-sqlite = { path = "../aos-sqlite" }
aos-wasm-abi = { path = "../aos-wasm-abi" }
aos-runtime = { path = "../aos-runtime" }

anyhow = "1"
aes-gcm-siv = "0.11"
axum = { version = "0.8.8", features = ["json"] }
base64 = "0.22"
clap = { version = "4", features = ["derive", "env"] }
dotenvy = "0.15"
getrandom = "0.2"
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_bytes = "0.11"
serde_cbor = "0.11"
serde_json = "1"
sha2 = "0.10"
tokio = { version = "1", features = ["full"] }
tower = { version = "0.5", features = ["util"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
thiserror = "1"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
aos-air-exec = { path = "../aos-air-exec" }
assert_cmd = "2"
indexmap = "2"
tempfile = "3"
wat = "1"

[[bin]]
name = "aos-node-hosted"
path = "src/main.rs"
